--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "esbuild": "^0.25.10"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+    "build": "esbuild app/javascript/entrypoints/*.jsx --bundle --sourcemap --outdir=app/assets/builds --loader:.jsx=jsx --public-path=/assets",
+    "build:watch": "esbuild app/javascript/entrypoints/*.jsx --bundle --sourcemap --outdir=app/assets/builds --loader:.jsx=jsx --public-path=/assets --watch"
   },
   "dependencies": {
+    "framer-motion": "^12.23.22",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0"
   }
 }
