--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:watch": "esbuild app/javascript/entrypoints/*.jsx --bundle --sourcemap --outdir=app/assets/builds --loader:.jsx=jsx --public-path=/assets --watch"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "framer-motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
